--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is yao xiaokui."
-header-img: "img/my_head_image.jpg"
+header-img: "img/fengjing.jpg"
 ---
 
 <!-- Language Selector -->
