--- a/about.html
+++ b/about.html
@@ -5,11 +5,6 @@ description: "Hey, this is yao xiaokui."
 header-img: "img/fengjing.jpg"
 ---
 
-<!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select> -->
 
 <!-- Chinese Version -->
 <div class="zh post-container">
@@ -18,7 +13,7 @@ header-img: "img/fengjing.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>姚晓魁(readyao)</strong>，一只后台开发程序猿，现在深圳腾讯工作。</p>
+    <p>Hey，我是<strong>姚晓魁</strong>，一只后台开发程序猿，现在深圳腾讯工作。</p>
 
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢电影和音乐。</p>
 
